feat: implement page objects for full purchase flow
All 7 page objects fully implemented using locators from
AI-docs/locators.md. ElementActions gains findAllTexts() and check()
helpers. Lombok bumped 1.18.36 → 1.18.38 to fix a pre-existing
mvn clean compile crash on Java 21.0.10 (TypeTag.UNKNOWN reflection
failure in the annotation processor).

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>